2002-05-31  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	* libs/GetFont.c (GetFontSetOrFixed):
	Fixed some I18N_MB error messages. Removed strictly fixed code

	* fvwm/fvwm.c (main):
	Set the locale modifiers

2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (restore_focus_after_unmap):
	fixed a problem w/ colormap transition when transient window died

	* fvwm/session.c (getUniqueStateFilename):
	applied security patch by Jan Echternach

	* fvwm/fvwm.c (InitVariables):
	Properly initialise Scr.flags.is_pointer_on_this_screen

2002-05-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	allow to pass the focus click to applications and have a function bound
	to it at the same time

2002-05-19  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c (CMD_Colorset):
	fixed a crash on a new 2.5.x Colorset syntax;
	support (kind of) this new sytax by passing it to FvwmTheme

2002-05-02  Mikhail Kruk  <meshko@cs.brandeis.edu>

	* fvwm/module_interface.c (make_named_packe):
	Fixed maximal length of a named module packet

2002-04-23  Jochen Klenner  <jochen.klenner@gmx.net>

	* fvwm/windowlist.c (CMD_WindowList):
	Added new Windowlist option CurrentAtEnd

2002-04-21  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* fvwm/Makefile.am:
	setup fvwm and fvwm.1 symlinks for forward compatibility when installing

	* fvwm/fvwm2.1:
	fixed two places

2002-04-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (move_window_doit):
	set the is_icon_moved too flag if the icon was moved non-interactively

2002-04-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (CheckBinding):
	(MatchBinding):
	(MatchBindingExactly):
	(GrabWindowKey):
	(GrabWindowButton):
	patch by yeti@physics.muni.cz to help with a weird problem w/ czech
	keyboards

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* configure.in:
	changed to 2.4.8

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* NEWS: