@@ -1,3 +1,8 @@
+2002-06-02  Mikhael Goikhman  <migo@homemail.com>
+
+	* Makefile.am:
+	setup symlinks for fvwm-root
+
 2002-05-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwmrc_convert.1:
